<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.eryansky</groupId>
        <artifactId>ec-parent</artifactId>
        <version>4.3.20260624.01</version>
    </parent>

    <artifactId>ec-app</artifactId>
    <version>4.3.20260612</version>
    <packaging>${project.packaging}</packaging>
    <name>ec-app</name>
    <description>web</description>

    <properties>
        <maven.deploy.skip>true</maven.deploy.skip>
        <velocity.version>2.4.1</velocity.version>
        <liquibase.version>4.33.0</liquibase.version>
        <commons-cli.version>1.11.0</commons-cli.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
    </properties>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <project.packaging>jar</project.packaging>
                <configSuffix></configSuffix>
                <profileActive>dev</profileActive>
            </properties>
            <dependencies>
                <!-- JSP 渲染引擎 -->
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-jasper</artifactId>
                    <version>${tomcat.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.tomcat.embed</groupId>
                            <artifactId>tomcat-embed-core</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-core</artifactId>
                    <version>${tomcat.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.tomcat</groupId>
                            <artifactId>tomcat-annotations-api</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-el</artifactId>
                    <version>${tomcat.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-websocket</artifactId>
                    <version>${tomcat.version}</version>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.tomcat</groupId>
                            <artifactId>tomcat-annotations-api</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-actuator</artifactId>
                    <version>${spring-boot.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <project.packaging>war</project.packaging>
                <configSuffix>-prod</configSuffix>
                <profileActive>prod</profileActive>
            </properties>
            <dependencies>
                <!-- JSP 渲染引擎 -->
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-jasper</artifactId>
                    <version>${tomcat.version}</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-core</artifactId>
                    <version>${tomcat.version}</version>
                    <scope>provided</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.tomcat</groupId>
                            <artifactId>tomcat-annotations-api</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-el</artifactId>
                    <version>${tomcat.version}</version>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-websocket</artifactId>
                    <version>${tomcat.version}</version>
                    <scope>provided</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>org.apache.tomcat</groupId>
                            <artifactId>tomcat-annotations-api</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>docker</id>
            <properties>
                <project.packaging>jar</project.packaging>
                <configSuffix>-docker</configSuffix>
                <profileActive>docker</profileActive>
            </properties>
            <dependencies>
                <!-- JSP 渲染引擎 -->
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-jasper</artifactId>
                    <version>${tomcat.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-core</artifactId>
                    <version>${tomcat.version}</version>
                    <exclusions>
                        <exclusion>
                            <artifactId>tomcat-annotations-api</artifactId>
                            <groupId>org.apache.tomcat</groupId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-el</artifactId>
                    <version>${tomcat.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.tomcat.embed</groupId>
                    <artifactId>tomcat-embed-websocket</artifactId>
                    <version>${tomcat.version}</version>
                    <exclusions>
                        <exclusion>
                            <artifactId>tomcat-annotations-api</artifactId>
                            <groupId>org.apache.tomcat</groupId>
                        </exclusion>
                    </exclusions>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-common</artifactId>
            <version>${ec-common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-j2cache-spring-boot-starter</artifactId>
            <version>${ec-j2cache-spring-boot-starter.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-app-common</artifactId>
            <version>${ec-app-common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.eryansky</groupId>
            <artifactId>ec-encrypt-spring-boot-starter</artifactId>
            <version>${ec-encrypt-spring-boot-starter.version}</version>
        </dependency>


        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.10.17</version>
        </dependency>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commons-cli.version}</version>
        </dependency>

        <dependency>
            <groupId>com.belerweb</groupId>
            <artifactId>pinyin4j</artifactId>
            <version>2.5.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
            <version>${velocity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibase.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


    </dependencies>
    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>application*.properties</exclude>
                    <exclude>config*.properties</exclude>
                    <exclude>j2cache*.properties</exclude>
                    <exclude>logback*.xml</exclude>
                    <exclude>data/**</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <!-- 是否替换@xx@表示的maven properties属性值 -->
                <filtering>true</filtering>
                <includes>
                    <include>application.properties</include>
                    <include>application-${profileActive}.properties</include>
                    <include>config-${profileActive}.properties</include>
                    <include>j2cache-${profileActive}.properties</include>
                    <include>logback-${profileActive}.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <targetPath>META-INF/resources</targetPath>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <excludes>
                    <exclude>userfiles/**</exclude>
                    <exclude>disk/**</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <packagingExcludes>
                        WEB-INF/classes/META-INF/resources/**
                    </packagingExcludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <mainClass>com.eryansky.Application</mainClass>
<!--                    <executable>true</executable>-->
<!--                    <image>eryansky.com</image>-->
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <from>
<!--                        <image>openjdk:8-jre-alpine</image>-->
                        <image>dragonwell-registry.cn-hangzhou.cr.aliyuncs.com/dragonwell/dragonwell:21</image>
                    </from>
                    <to>
                        <image>eryanwcp/${project.artifactId}</image>
                        <tags>
                            <tag>latest</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                    <allowInsecureRegistries>true</allowInsecureRegistries>
                    <container>
                        <mainClass>com.eryansky.Application</mainClass>
                        <jvmFlags>
                            <jvmFlag>-Dspring.profiles.active=${profileActive}</jvmFlag>

                            <!-- 容器资源感知与内存动态配比，防止 K8s OOM Killed -->
                            <jvmFlag>-XX:+UseContainerSupport</jvmFlag>
                            <jvmFlag>-XX:MaxRAMPercentage=60.0</jvmFlag>
                            <jvmFlag>-XX:InitialRAMPercentage=20.0</jvmFlag>

                            <!-- 分层编译优化：在容器环境中，限制 C1 编译器层级，能减少大量启动时的 CPU 占用，缩短启动时间 -->
                            <jvmFlag>-XX:TieredStopAtLevel=1</jvmFlag>
                            <!-- 垃圾回收器：JDK 21 下 G1GC 经过深度演进，依旧是高并发低延迟的生产首选 -->
                            <jvmFlag>-XX:+UseG1GC</jvmFlag>
                            <jvmFlag>-XX:+ZGenerational</jvmFlag>
                            <!-- 开启 JDK 21 核心黑科技：字符串去重，最高可节省 10%~15% 的 Java 堆内存空间 -->
                            <jvmFlag>-XX:+UseStringDeduplication</jvmFlag>
                            <!-- 解决容器内随机数生成阻塞导致的启动变慢问题 -->
                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>

                            <!-- Spring Boot 3.5 + JDK 21 启动性能优化 -->
                            <!-- 允许 JVM 共享类数据归档，配合 CDS 挂载，直接跳过繁重的 classpath 扫描（后文详述） -->
                            <jvmFlag>-Xshare:on</jvmFlag>
                            <!-- 关闭背景早期初始化，避免多核受限的容器内抢夺启动阶段宝贵的 CPU 算力 -->
                            <jvmFlag>-Dspring.backgroundpreinitializer.ignore=true</jvmFlag>

                            <!-- 环境基础配置 -->
                            <jvmFlag>-Duser.timezone=GMT+08</jvmFlag>
                            <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>

                            <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.math=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.base/java.text=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmFlag>
                        </jvmFlags>
                        <args>
                        </args>
                        <volumes>
                            <volume>/data</volume>
                            <volume>/logs</volume>
                        </volumes>
                        <ports>
                            <port>8080</port>
                        </ports>

                        <!-- 设置时区  -->
                        <environment>
                            <TZ>Asia/Shanghai</TZ>
                        </environment>

                        <!-- 保持镜像创建时间为当前时间，便于企业内部私有仓库（如 Harbor）按时间流正确排序 -->
                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                    </container>
                </configuration>
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>build</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
            </plugin>

        </plugins>
    </build>

</project>
